# RCSimpleMidiPlay

./: .gitignore  README.md
MIDIClockLib8.0/: MIDIClock.bas  MIDIClock.c  MIDIClock.def  MIDIClock.h  MIDIClock.sln  MIDIClock.vcxproj  MIDIClock.vcxproj.filters  readme.txt
MIDIClockLib8.0/docs/: MIDIClock.html
MIDIDataLib8.0/: MIDIData.bas  MIDIData.c  MIDIData.def  MIDIData.h  MIDIData.sln  MIDIData.vcxproj  MIDIData.vcxproj.filters  readme.txt  readme_en.txt
MIDIDataLib8.0/docs/: MIDIData.html  MIDIData_en.html
MIDIIOLib8.0/: MIDIIO.c  MIDIIO.def  MIDIIO.h  MIDIIO.sln  MIDIIO.vcxproj  MIDIIO.vcxproj.filters  crtdbg_.h  readme.txt
MIDIIOLib8.0/docs/: MIDIIO.html
MIDIStatus8.0/: MIDIStatus.bas  MIDIStatus.c  MIDIStatus.def  MIDIStatus.h  MIDIStatus.sln  MIDIStatus.vcxproj  MIDIStatus.vcxproj.filters  readme.txt
MIDIStatus8.0/docs/: MIDIStatus.html
cmake/: CMakeLists.txt
cmake/MIDIClockLib/: CMakeLists.txt
cmake/MIDIDataLib/: CMakeLists.txt
cmake/MIDIIOLib/: CMakeLists.txt
cmake/MIDIStatus/: CMakeLists.txt
experiment/: CMakeLists.txt  test.c
